New paged extra keys.
- Replaces old on-screen keys
- Inspired by Termux app
- Tour on first connect
- Replaces send text dialog
- Supports sending F-keys and other extra keys to avoid the need for Send Keys dialog most of the time